# Task-manager

./: .env  Makefile  Procfile  README.md  db.sqlite3  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: gjango.yml  main.yml
fixtures/: labels.json  statuses.json  tasks.json  test_label.json  test_status.json  test_task.json  test_user.json  users.json
labels/: forms.py  models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py  0002_alter_labels_name.py
statuses/: forms.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py  0002_alter_statuses_name.py  0003_alter_statuses_name.py  0004_alter_statuses_name.py  0005_alter_statuses_name.py
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/templates/: base.html  index.html  login.html
tasks/: forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_rename_discription_tasks_description.py  0003_alter_tasks_executor.py  0004_alter_tasks_executor.py  0005_alter_tasks_executor.py  0006_relations_tasks_labels.py  0007_alter_tasks_description_alter_tasks_executor_and_more.py  0008_alter_tasks_executor.py
templates/: base.html  index.html  login.html
templates/labels/: create.html  delete.html  index.html  update.html
templates/statuses/: create.html  delete.html  index.html  update.html
templates/tasks/: create.html  delete.html  index.html  task.html  update.html
templates/users/: create.html  delete.html  index.html  update.html
users/: forms.py  models.py  tests.py  urls.py  views.py
(+11 files in other folders)
